# OSTBotDownloader

./: .gitignore  CHANGELOG.md  LICENSE  OSTBotDownloader.cabal
app/: Main.hs
src/: Run.hs
src/Archive/Zip/: Extended.hs
src/Bot/: Action.hs  Keyboard.hs  Model.hs  Run.hs
src/Network/HTTP/: Extended.hs
src/Parser/: GameOST.hs
src/System/Directory/: Extended.hs
