cabal-version:   3.0
name:            OSTBotDownloader
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          DeniLark
maintainer:      denlarsites@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options:        -Wall
  build-depends:
    , base                 ^>=4.17.2.1
    , bytestring
    , directory
    , http-client-tls
    , http-conduit
    , http-types
    , servant-client
    , telegram-bot-api
    , telegram-bot-simple
    , text
    , zenacy-html
    , zip

  default-extensions: OverloadedStrings

library
  import:           warnings
  exposed-modules:
    Archive.Zip.Extended
    Bot.Keyboard
    Bot.Run
    Network.HTTP.Extended
    Parser.GameOST
    Run
    System.Directory.Extended

  -- other-modules:
  -- other-extensions:

  hs-source-dirs:   src
  default-language: Haskell2010

executable OSTBotDownloader
  import:           warnings
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts

  -- other-modules:
  -- other-extensions:
  build-depends:    OSTBotDownloader
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite OSTBotDownloader-test
  import:           warnings
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    OSTBotDownloader
